# ShadowLink-interview

./: .gitignore  5-10-worklog.md  Makefile  README.md  create-shortcut.vbs  diagnostic.py  history_manager.py  launcher.py  llm_client.py  main.py  my_skills.py  package-lock.json  rag_engine.py  skill_interface.py  start.bat  start_demo.bat  start_l1_demo.bat  web_crawler.py
client/: README.md
config/: README.md
config/templates/: llm_config.example.json  tasks_config.example.json
core/: __init__.py  skill_interface.py
data/memory/: episodic.json
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml
deploy/mysql/: my.cnf
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
deploy/redis/: redis.conf
deploy/scripts/: init-db.sql  start.sh
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE_PLAN copy.md  ARCHITECTURE_PLAN.md  IMPLEMENTATION_GAP_ANALYSIS.md  LAYERED_ARCHITECTURE_DESIGN.md  项目架构速览.md  项目说明书.md
docs/面试学习模块设计/: RAG与GraphRAG扩展设计方案.md  worklog-1.md  worklog-5-9.md  执行方案.md  技术选型方案.md  理念.txt  阅读工作台Review修复执行文档.md
llm/: __init__.py  llm_client.py
proto/: agent_service.proto  buf.gen.yaml  buf.yaml  common.proto  generate.sh  mcp_service.proto  memory_service.proto  rag_service.proto
rag/: __init__.py  rag_engine.py  web_crawler.py
scripts/: bootstrap_resources.py
shadowlink-ai/: .dockerignore  Dockerfile  README.md  pyproject.toml
shadowlink-ai/app/: cli.py  config.py  main.py
shadowlink-ai/app/agent/: __init__.py  engine.py  state.py
shadowlink-ai/app/agent/memory/: __init__.py  episodic.py  long_term.py  semantic.py  short_term.py
shadowlink-ai/app/agent/multi_agent/: __init__.py  executor.py  hermes.py  hierarchical.py  supervisor.py  swarm.py
shadowlink-ai/app/agent/plan_execute/: __init__.py  executor.py  graph.py  planner.py  replan.py  stream_executor.py
shadowlink-ai/app/agent/react/: __init__.py  executor.py  graph.py  nodes.py
shadowlink-ai/app/api/: __init__.py
shadowlink-ai/app/api/grpc/: __init__.py  agent_servicer.py  mcp_servicer.py  rag_servicer.py  server.py
shadowlink-ai/app/api/v1/: __init__.py  agent_router.py  codebase_router.py  file_router.py  health_router.py  integrations_router.py  interview_router.py  mcp_router.py  rag_router.py  settings_router.py  system_router.py
shadowlink-ai/app/codebase/: __init__.py  models.py  repository.py  schemas.py  service.py
shadowlink-ai/app/core/: __init__.py  dependencies.py  exceptions.py  lifespan.py  logging.py  middleware.py
shadowlink-ai/app/file_processing/: __init__.py  pipeline.py
shadowlink-ai/app/file_processing/extractors/: __init__.py  formula_extractor.py  metadata_extractor.py  table_extractor.py
shadowlink-ai/app/file_processing/parsers/: __init__.py  code_parser.py  docx_parser.py  image_parser.py  markdown_parser.py  pdf_parser.py  pptx_parser.py  xlsx_parser.py
shadowlink-ai/app/integrations/: __init__.py
shadowlink-ai/app/integrations/codex/: __init__.py  adapter.py  detector.py  schemas.py
shadowlink-ai/app/integrations/web_research/: __init__.py  base.py  disabled.py  schemas.py
shadowlink-ai/app/interview/: __init__.py  external_runner.py  models.py  reading.py  repository.py  review_service.py  schemas.py
shadowlink-ai/app/llm/: __init__.py  client.py
shadowlink-ai/app/llm/middleware/: __init__.py  cache.py  rate_limiter.py  token_counter.py
shadowlink-ai/app/llm/providers/: __init__.py  anthropic.py  deepseek.py  ollama.py  openai.py
shadowlink-ai/app/mcp/: __init__.py  client.py  registry.py  server.py
shadowlink-ai/app/mcp/adapters/: __init__.py  langchain_adapter.py  openai_adapter.py
shadowlink-ai/app/plugins/: __init__.py  interface.py  loader.py
shadowlink-ai/app/plugins/builtin/: __init__.py  docx_plugin.py  excel_plugin.py  image_plugin.py  pdf_plugin.py
shadowlink-ai/app/rag/: __init__.py  engine.py
shadowlink-ai/app/rag/chunking/: __init__.py  agentic.py  recursive.py  semantic.py
shadowlink-ai/app/rag/embedding/: __init__.py  api.py  local.py
shadowlink-ai/app/rag/index/: __init__.py  faiss_index.py  manager.py  milvus_index.py
shadowlink-ai/app/rag/reranking/: __init__.py  cross_encoder.py  llm_rerank.py
shadowlink-ai/app/rag/retrieval/: __init__.py  bm25.py  hybrid.py  multi_query.py  self_rag.py  vector.py
shadowlink-ai/app/tools/: __init__.py  base.py  code_executor.py  file_ops.py  knowledge_search.py  local_search.py  system_tools.py  web_search.py
shadowlink-ai/data/: llm_providers.example.json  llm_providers.json  thinking_process.txt
shadowlink-ai/data/interview/: interview_skills.json  profiles.json  reviews.json  sessions.json  spaces.json
shadowlink-ai/data/interview/uploads/space-e7e81ea1f597/: resume.txt
shadowlink-ai/data/memory/: episodic.json
shadowlink-ai/scripts/: test_agent.py
shadowlink-ai/tests/: conftest.py  test_health.py
shadowlink-ai/tests/unit/: test_agent_engine.py  test_codebase_api.py  test_codebase_repository.py  test_codex_detector.py  test_external_agent_runner.py  test_interview_api.py  test_interview_models.py  test_interview_repository.py  test_interview_review_service.py  test_memory.py  test_models.py  test_rag_engine.py  test_reading_workspace.py  test_web_research_disabled.py
shadowlink-electron/: electron-builder.yml  package-lock.json  package.json
shadowlink-server/: .dockerignore  Dockerfile  mvnw  mvnw.cmd  pom.xml
shadowlink-web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
storage/: __init__.py  history_manager.py
tools/: my_skills.py  normalize_icon.py
(+159 files in other folders)
