[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadowlink-ai"
version = "0.1.0"
description = "ShadowLink AI Service — Agent orchestration, RAG, and tool execution"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "langchain>=0.2,<1",
    "langchain-openai>=0.1,<1",
    "langchain-community>=0.2,<1",
    "langgraph>=0.2,<1",
    "faiss-cpu>=1.8,<2",
    "sentence-transformers>=3,<4",
    "grpcio>=1.63,<2",
    "grpcio-tools>=1.63,<2",
    "protobuf>=4.25,<5",
    "httpx>=0.27,<1",
    "sse-starlette>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
